@startuml

title Controler

class IController <<interface>> {
}

class Controller #LightGreen {
  - m_document : unique_ptr<IDocument>
  - m_context : unique_ptr<EditContext>
  - m_view : shared_ptr<IDocument>
  - m_actions: array of actions
}

class IView <<interface>> {
 
}


class IDocument <<interface>> {
 
}

class IContext <<interface>> {
 
}

class IAction <<interface>> {
 
}

class IActionFactory <<interface>> {
 
}



Controller --> IView : shared_ptr
IView ..> Controller : weak_ptr
IController <|.. Controller
Controller -> IDocument : unique_ptr
Controller -> IContext : unique_ptr
Controller --> IAction : array of unique_ptr

Controller ..> IActionFactory : init_actions

IActionFactory ..> IAction : create_action
'class AddPrimitiveAction {}
'class RemovePrimitiveAction {}
'class CompositeAction {}

'IAction <|-- AddPrimitiveAction
'IAction <|-- RemovePrimitiveAction
'IAction <|-- CompositeAction



@enduml